git-svn-id: http://svn.paluy.org/myprojects/DDE/DDEConsole/trunk@343 c3da5284-7a2d-4169-a6cf-ff33e6757432

--- a/DDEConsole/DDEConsole.csproj
+++ b/DDEConsole/DDEConsole.csproj
@@ -31,6 +31,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="NDde, Version=2.1.563.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>.\NDde.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
