--- a/DDEConsole/DDEConsole.csproj
+++ b/DDEConsole/DDEConsole.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.21022</ProductVersion>
+    <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{1BB7FAE3-01B5-46B0-86E3-69F8D9B2DEFD}</ProjectGuid>
     <OutputType>Exe</OutputType>
@@ -33,7 +33,7 @@
   <ItemGroup>
     <Reference Include="NDde, Version=2.1.563.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>.\NDde.dll</HintPath>
+      <HintPath>..\NDde.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
