--- a/Oracle/Oracle.csproj
+++ b/Oracle/Oracle.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.21022</ProductVersion>
+    <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{8485930B-9A1D-4BC8-980B-50D2190E0CD1}</ProjectGuid>
     <OutputType>WinExe</OutputType>
@@ -48,6 +48,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ExchangeOption.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
