--- a/Oracle/Oracle.csproj
+++ b/Oracle/Oracle.csproj
@@ -56,6 +56,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataSetPosition.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>DataSetPosition.xsd</DependentUpon>
+    </Compile>
     <Compile Include="ExchangeOption.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -79,6 +84,17 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <None Include="DataSetPosition.xsc">
+      <DependentUpon>DataSetPosition.xsd</DependentUpon>
+    </None>
+    <None Include="DataSetPosition.xsd">
+      <SubType>Designer</SubType>
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>DataSetPosition.Designer.cs</LastGenOutput>
+    </None>
+    <None Include="DataSetPosition.xss">
+      <DependentUpon>DataSetPosition.xsd</DependentUpon>
+    </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
