--- a/CollectData/CollectData.csproj
+++ b/CollectData/CollectData.csproj
@@ -63,6 +63,12 @@
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="tase.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="tase.xsd" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
